added some initial controls for the tank (actually the camera)

--- a/TankWars/Config/DefaultEngine.ini
+++ b/TankWars/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
 GameDefaultMap=/Game/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/TankWarsGameMode_BP.TankWarsGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
