--- a/TankWars/Config/DefaultEngine.ini
+++ b/TankWars/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/TankWarsGameMode_BP.TankWarsGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -55,3 +55,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
